updated magazine section

--- a/index.html
+++ b/index.html
@@ -207,21 +207,21 @@
 
       </div>
       <div class="d-flex flex-row mb-3 align-items-end">
-        <article class=" flex-fill col-md-3">
+        <article class="mg-article">
           <img src="./assets/images/mg-2.webp" alt="mg" class="img-fluid">
           <div class="row py-2">
-            <h6 class="container"><span class="mg-bage">DOWNTIME </span><a href="#" class="mg-link-bage">Primary</a></h6>
+            <h6 class="container"><span class="mg-bage">PERISCOPE </span><a href="#" class="mg-link-bage"> CULTURE</a></h6>
           </div>
           <h6><a href="#" class="font-weight-bolder " >On Tiananmen Anniversary, Hong Kong Protesters Brace for Chinese Crackdown</a></h6>   
         </article>
-        <article class=" flex-fill col-md-3">
+        <article class="p-2 flex-fill col-md-3">
           <img src="./assets/images/mg-2.webp" alt="mg" class="img-fluid">
           <div class="row py-2">
             <h6 class="container"><span class="mg-bage">DOWNTIME </span><a href="#" class="mg-link-bage">Primary</a></h6>
           </div>
           <h6><a href="#" class="font-weight-bolder " >On Tiananmen Anniversary, Hong Kong Protesters Brace for Chinese Crackdown</a></h6>
         </article>
-        <article class=" flex-fill col-md-3">
+        <article class="p-2 flex-fill col-md-3">
           <img src="./assets/images/mg-7.webp" alt="mg" class="img-fluid">
           <div class="row py-2">
             <h6 class="container"><span class="mg-bage ">DOWNTIME </span><a href="#" class="mg-link-bage">Primary</a></h6>
@@ -231,7 +231,7 @@
         <article class="p-2 flex-fill col-md-3">
           <img src="./assets/images/mg-4.webp" alt="mg" class="img-fluid">
           <div class="row py-2">
-            <h6 class="container"><span class="mg-bage">DOWNTIME </span><a href="#" class="mg-link-bage">Primary</a></h6>
+            <h6 class="container"><span class="mg-bage">DOWNTIME </span><a href="#" class="mg-link-bage">CULTURE</a></h6>
           </div>
           <h6><a href="#" class="font-weight-bolder" >I'm Eric Garner's Mom. Four Cops Must Be Convicted in George Floyd's Death</a></h6>
         </article>
