fixed linter issues

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -831,29 +830,29 @@
       </div>
       <div class="d-flex flex-row">
         <nav class="nav bg-white py-1 d-flex flex-row align-items-center">
-          <a class="ft-menu-item" href="#">U.S. Edition</i></a>
-          <a class="ft-menu-item" href="#">日本</i></a>
-          <a class="ft-menu-item" href="#">Pakistan</i></a>
-          <a class="ft-menu-item" href="#">Polska</i></a>
-          <a class="ft-menu-item" href="#">România</i></a>
+          <a class="ft-menu-item" href="#">U.S. Edition</a>
+          <a class="ft-menu-item" href="#">日本</a>
+          <a class="ft-menu-item" href="#">Pakistan</a>
+          <a class="ft-menu-item" href="#">Polska</a>
+          <a class="ft-menu-item" href="#">România</a>
         </nav>     
 
       </div>
       <div class="d-flex flex-row">
         <nav class="nav bg-white py-1 d-flex flex-row align-items-center justify-content-start">
-          <a class="ft-menu-item" href="#">About Us</i></a>
-          <a class="ft-menu-item" href="#">Corrections</i></a>
-          <a class="ft-menu-item" href="#">Contact Us</i></a>
-          <a class="ft-menu-item" href="#">Editorial Guidelines</i></a>
-          <a class="ft-menu-item" href="#">Advertise</i></a>
-          <a class="ft-menu-item" href="#">Copyright</i></a>
-          <a class="ft-menu-item" href="#">Terms & Conditions</i></a>
-          <a class="ft-menu-item" href="#">Privacy Policy</i></a>
-          <a class="ft-menu-item" href="#">Cookie Policy</i></a>
-          <a class="ft-menu-item" href="#">Terms of Sale</i></a>
-          <a class="ft-menu-item" href="#">Archive</i></a>
-          <a class="ft-menu-item" href="#">Announcements</i></a>
-          <a class="ft-menu-item-border" href="#">Consent preferences</i></a>
+          <a class="ft-menu-item" href="#">About Us</a>
+          <a class="ft-menu-item" href="#">Corrections</a>
+          <a class="ft-menu-item" href="#">Contact Us</a>
+          <a class="ft-menu-item" href="#">Editorial Guidelines</a>
+          <a class="ft-menu-item" href="#">Advertise</a>
+          <a class="ft-menu-item" href="#">Copyright</a>
+          <a class="ft-menu-item" href="#">Terms & Conditions</a>
+          <a class="ft-menu-item" href="#">Privacy Policy</a>
+          <a class="ft-menu-item" href="#">Cookie Policy</a>
+          <a class="ft-menu-item" href="#">Terms of Sale</a>
+          <a class="ft-menu-item" href="#">Archive</a>
+          <a class="ft-menu-item" href="#">Announcements</a>
+          <a class="ft-menu-item-border" href="#">Consent preferences</a>
         </nav>
       
       </div>
