added readme file and fixed issue with the html validation

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 
         </aside>
 
-        <section class="top flex-fill col-12 col-md-7 col-lg-5 flex-shrink-3 flex-grow-3 order-4 d-md-none">
+        <div class="top flex-fill col-12 col-md-7 col-lg-5 flex-shrink-3 flex-grow-3 order-4 d-md-none">
  
           <section class="my-turn">
  
@@ -637,7 +637,7 @@
           
           <!-- End: More stories -->
  
-        </section>
+        </div>
 
       </div>
     
@@ -651,10 +651,14 @@
         </span>IN The MAGAZINE
       </h5>
 
-      <div class="d-flex flex-row mb-3 align-items-end">
-        <!-- <article class=" flex-fill col-lg-3">
-          <img src="./assets/images/mg-3.webp" alt="mg" class="img-fluid">    
-        </article> -->
+      <div class="d-flex flex-row mb-3 align-items-end">        
+        <article class="p-2 flex-fill col-lg-3">
+          <img src="./assets/images/mg-4.webp" alt="mg" class="img-fluid">
+          <div class="row py-2">
+            <h6 class="container"><span class="mg-bage">DOWNTIME </span><a href="#" class="mg-link-bage">Primary</a></h6>
+          </div>
+          <h6><a href="#" class="font-weight-bolder" >I'm Eric Garner's Mom. Four Cops Must Be Convicted in George Floyd's Death</a></h6>
+        </article>
         <article class=" flex-fill col-lg-3">
           <img src="./assets/images/mg-2.webp" alt="mg" class="img-fluid">
           <div class="row py-2">
@@ -713,7 +717,6 @@
       <!-- Editors Pick -->
 
       <h5 class="border-bottom py-2 mx-3 d-flex flex-row  mb-3 align-items-center justify-content-center">
-        <span>
           <span class="bg-primary text-white font-weight-bold p-1 mx-1">
             <img src="./assets/images/icon-holder.svg" alt="N">
           </span>EDITOR'S PICK
