updated linter config

--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
                   <h5 class="card-title font-weight-bolder text-dark">The Starting 5</h5>
                   <p class="card-text">See why nearly a quarter of a million subscribers begin their day with the Starting 5.</p>
                   <div class="input-group card-text">
-                      <input type="text" class="form-control" placeholder="Email" aria-label="Username" aria-describedby="basic-addon1">
+                      <input type="text" class="form-control" placeholder="Email" aria-label="Username">
                   </div>
                   <button type="button" class="btn card-text btn-primary mt-2 text-uppercase">Free sign up</button>
                 </div>
