refactored based on the pr comment

--- a/index.html
+++ b/index.html
@@ -493,14 +493,6 @@
           </div>
         </div>
 
-        <div class="card flex-fill mb-4">
-          <img src="./assets/images/card-s5.webp" class="card-img-top" alt="card1">
-          <div class="card-body">
-            <h5 class="card-title"><a href="#" class="font-weight-bold">Want to Learn to Code Online?</a></h5>
-            <p class="card-text">If you are thinking about changing career or you have recently lost your job, this might be the time to think about a career in coding.</p>
-          </div>
-        </div>
-
          <!-- CARD -->
 
         </aside>
@@ -1106,7 +1098,7 @@
 
         <span class="col-md-4 col-lg-2 flex-grow-1">&copy; 2020 NEWSWEEK</span>
 
-        <nav class="col-md-6 col-lg-8 flex-grow-2 nav bg-white py-1 d-flex flex-row align-items-center d-justify-content-start d-md-justify-content-end">
+        <nav class="col-md-6 col-lg-8 flex-grow-2 nav bg-white py-1 d-flex flex-row align-items-center d-justify-content-start justify-content-end">
           <a class="nav-link" href="#"><i class="fab fa-facebook"></i></a>
           <a class="nav-link" href="#"><i class="fab fa-twitter-square"></i></a>
           <a class="nav-link" href="#"><i class="fab fa-linkedin"></i></a>
