fixed all issues from TSE code review

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
       </h5>
 
       <div class="d-flex flex-wrap flex-row mb-3 align-items-end">        
-        <article class="p-2 container-fluid col-12 col-md-3">
+        <article class="p-2 col-12 col-md-3">
           <img src="./assets/images/mg-4.webp" alt="mg" class="img-fluid  col-12 px-0 py-1">
           <div class="row py-2">
             <h6 class="container mg-tag"><span class="mg-bage">DOWNTIME </span><a href="#" class="mg-link-bage">Primary</a></h6>
