resolved The Minskins Review 29/06 #3

--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
       </section>
 
       <div class="subscribe flex-wrap container-fluid flex-row d-flex mb-3 flex-wrap border-top">
-        <article class="col-sm-12 col-lg-8">
+        <article class="col-sm-12 col-lg-8 container">
           <h6 class="flex-row flex-fill pt-4 font-weight-bolder text-primary text-uppercase">subscribe</h6>
           <div class="card">
             <div class="row no-gutters">
@@ -1091,14 +1091,14 @@
 
       <div class="footer-row d-flex d-flex-row flex-wrap d-md-flex-row d-flex-column border-bottom d-align-items-start d-justify-content-center d-md-align-items-center d-md-justify-content-between">
 
-        <h2 class="col-md-2 col-lg-1 px-2 m-2"><a class="text-primary" href="#">
+        <h2 class="col-12 col-md-2 col-lg-1 px-2 m-2"><a class="text-primary" href="#">
           <img src="./assets/images/NewsweekLogo.png" alt="logo" class="bd-primary h2 text-white footer-logo img-fluid ">
         </a></h2>
         
 
-        <span class="col-md-4 col-lg-2 flex-grow-1">&copy; 2020 NEWSWEEK</span>
+        <span class="col-12 col-md-4 col-lg-2 flex-grow-1">&copy; 2020 NEWSWEEK</span>
 
-        <nav class="col-md-6 col-lg-8 flex-grow-2 nav bg-white py-1 d-flex flex-row align-items-center d-justify-content-start justify-content-end">
+        <nav class="col-12 col-md-6 col-lg-9 flex-grow-2 nav bg-white py-1 d-flex flex-row align-items-center d-justify-content-start ft-nav">
           <a class="nav-link" href="#"><i class="fab fa-facebook"></i></a>
           <a class="nav-link" href="#"><i class="fab fa-twitter-square"></i></a>
           <a class="nav-link" href="#"><i class="fab fa-linkedin"></i></a>
