validated html and scss

--- a/index.html
+++ b/index.html
@@ -139,17 +139,17 @@
           <div class="d-flex flex-row">
 
             <article class="col-lg-4 d-flex pl-0 flex-column">
-              <img src="./assets/images/my-t1.webp" alt="mg" class="img-fluid mt-img">
+              <img src="./assets/images/matera-italy.webp" alt="mg" class="img-fluid mt-img">
               <h6 class="mt-2"><a href="#" class="font-weight-bolder" >I Spent 11 Years In Prison—And Produced a Rap Album at San Quentin'</a></h6>
             </article>
 
-            <article class="col-lg-4 d-flex flex-column">
-              <img src="./assets/images/my-t2.webp" alt="mg" class="img-fluid mt-img">
+            <article class="col-lg-4 d-flex pr-0 flex-column">
+              <img src="./assets/images/weight-loss-surgery-health-fitness.webp" alt="mg" class="img-fluid mt-img">
               <h6 class="mt-2"><a href="#" class="font-weight-bolder" >I Spent 11 Years In Prison—And Produced a Rap Album at San Quentin'</a></h6>
             </article>
 
             <article class="col-lg-4 d-flex pr-0 flex-column justify-content-between">
-              <img src="./assets/images/my-t3.webp" alt="mg" class="img-fluid mt-img">
+              <img src="./assets/images/cul-uncharted-masks-banner.webp" alt="mg" class="img-fluid mt-img">
               <h6 class="mt-2"><a href="#" class="font-weight-bolder" >I Spent 11 Years In Prison—And Produced a Rap Album at San Quentin'</a></h6>
             </article>
 
@@ -164,17 +164,17 @@
           <div class="d-flex flex-row px-0">
 
             <article class="col-lg-4 d-flex pl-0 flex-column">
-              <img src="./assets/images/my-t1.webp" alt="mg" class="img-fluid mt-img">
+              <img src="./assets/images/cul-uncharted-masks-banner.webp" alt="mg" class="img-fluid mt-img">
               <h6 class="mt-2"><a href="#" class="font-weight-bolder" >I Spent 11 Years In Prison—And Produced a Rap Album at San Quentin'</a></h6>
             </article>
 
-            <article class="col-lg-4 d-flex flex-column">
-              <img src="./assets/images/my-t2.webp" alt="mg" class="img-fluid mt-img">
+            <article class="col-lg-4 d-flex  pr-0 flex-column">
+              <img src="./assets/images/weight-loss-surgery-health-fitness.webp" alt="mg" class="img-fluid mt-img">
               <h6 class="mt-2"><a href="#" class="font-weight-bolder" >I Spent 11 Years In Prison—And Produced a Rap Album at San Quentin'</a></h6>
             </article>
 
             <article class="col-lg-4 d-flex flex-column pr-0">
-              <img src="./assets/images/my-t3.webp" alt="mg" class="img-fluid mt-img">
+              <img src="./assets/images/dating-lockdown-coronavirus-video-dating.webp" alt="mg" class="img-fluid mt-img">
               <h6 class="mt-2"><a href="#" class="font-weight-bolder" >I Spent 11 Years In Prison—And Produced a Rap Album at San Quentin'</a></h6>
             </article>
 
@@ -1047,16 +1047,13 @@
           <div class="card">
             <div class="row no-gutters">
               <div class="col-md-5">
-                <img src="./assets/images/card.png" class="card-img img-fluid" alt="...">
+                <img src="./assets/images/book-2.jpg" class="card-img img-fluid book2" alt="subscribe">
               </div>
               <div class="col-md-7">
                 <div class="card-body">
-                  <h5 class="card-title font-weight-bolder text-dark">The Starting 5</h5>
-                  <p class="card-text">See why nearly a quarter of a million subscribers begin their day with the Starting 5.</p>
-                  <div class="input-group card-text">
-                      <input type="text" class="form-control" placeholder="Email" aria-label="Username">
-                  </div>
-                  <button type="button" class="btn card-text btn-primary mt-2 text-uppercase">Free sign up</button>
+                  <h5 class="card-title font-weight-bolder text-dark">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</h5>
+                  <p class="card-text">All Access + Weekly Delivery.Choose A Membership That's Perfect for You!.</p>
+                    <button type="button" class="btn card-text btn-primary mt-2 text-uppercase">subscribe &gt;</button>
                 </div>
               </div>
             </div>
